added local equal false for the install line. this requires the cpp code to be recompiled. very important for non linux users

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Silas Tittes" />
 
-<meta name="date" content="2018-07-24" />
+<meta name="date" content="2018-07-26" />
 
 <title>performr vignette</title>
 
@@ -121,7 +121,7 @@ $(document).ready(function () {
 
 <h1 class="title toc-ignore">performr vignette</h1>
 <h4 class="author"><em>Silas Tittes</em></h4>
-<h4 class="date"><em>July 24, 2018</em></h4>
+<h4 class="date"><em>July 26, 2018</em></h4>
 
 </div>
 
@@ -134,7 +134,7 @@ $(document).ready(function () {
 <h2>Installation</h2>
 <p>Installing <code>performr</code> is done using the following command:</p>
 <pre class="r"><code>#install
-devtools::install_github(&quot;silastittes/performr&quot;)
+devtools::install_github(&quot;silastittes/performr&quot;, local = FALSE)
 #load library
 library(performr)</code></pre>
 <p><code>performr</code> depends on several packages from the <code>tidyverse</code>. These can take some time to install, but usually goes smoothly as long as your R is up to date! If you run into troubles, check the R session info at the bottom of this page. Compare to your own session info for missing packages and older package versions.</p>
@@ -735,7 +735,7 @@ R session info
 ##  language en_US                       
 ##  collate  en_US.UTF-8                 
 ##  tz       America/Denver              
-##  date     2018-07-24</code></pre>
+##  date     2018-07-26</code></pre>
 <pre><code>## Packages -----------------------------------------------------------------</code></pre>
 <pre><code>##  package     * version    date       source                               
 ##  assertthat    0.2.0      2017-04-11 CRAN (R 3.4.3)                       
