--- a/index.html
+++ b/index.html
@@ -136,7 +136,8 @@ $(document).ready(function () {
 <pre class="r"><code>#install
 devtools::install_github(&quot;silastittes/performr&quot;, local = FALSE)
 #load library
-library(performr)</code></pre>
+library(performr)
+library(tidyverse)</code></pre>
 <p><code>performr</code> depends on several packages from the <code>tidyverse</code>. These can take some time to install, but usually goes smoothly as long as your R is up to date! If you run into troubles, check the R session info at the bottom of this page. Compare to your own session info for missing packages and older package versions.</p>
 </div>
 <div id="simulating-example-data" class="section level2">
