--- a/index.html
+++ b/index.html
@@ -135,7 +135,8 @@ $(document).ready(function () {
 <p>Installing <code>performr</code> is done using the following command:</p>
 <pre class="r"><code>#install
 devtools::install_github(&quot;silastittes/performr&quot;, local = FALSE)
-#load library
+
+#load other libraries used below
 library(performr)
 library(tidyverse)
 library(ggridges)
