--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Silas Tittes" />
 
-<meta name="date" content="2018-07-27" />
+<meta name="date" content="2018-07-28" />
 
 <title>performr vignette</title>
 
@@ -121,7 +121,7 @@ $(document).ready(function () {
 
 <h1 class="title toc-ignore">performr vignette</h1>
 <h4 class="author"><em>Silas Tittes</em></h4>
-<h4 class="date"><em>July 27, 2018</em></h4>
+<h4 class="date"><em>July 28, 2018</em></h4>
 
 </div>
 
@@ -141,9 +141,9 @@ library(performr)
 library(tidyverse)
 library(ggridges)
 theme_set(theme_minimal())</code></pre>
-<p>As the model is written in Stan, it requires a c++ compiler. For Apple and PC users, you may need to install one. If the installation command above fails, Mac users can open their terminal and type:</p>
+<p>As the model is written in Stan, it requires a c++ compiler. For Apple and PC users, you likely need to install one. If the installation command above fails, Mac users can open their terminal and type:</p>
 <pre class="bash"><code>xcode-select --install</code></pre>
-<p>This should open some dialogue to install the Xcode developer tools. Follow the prompts to install. Once the install finishes, try the above command again. At this point, I have not tested the package on PCs, but I would guess a similar step is required (please email me if you have success on a PC!).</p>
+<p>This should open some dialogue to install the Xcode developer tools. Follow the prompts to install. Once the install finishes, try the <code>install_github()</code> command again. At this point, I have not tested the package on PCs, but I would guess a similar step is required (please email me if you have success on a PC!).</p>
 <p>Linux users can likely run the command as-is, or by using <code>devtools::install_github(&quot;silastittes/performr&quot;)</code>, which would use the pre-compiled version that my Linux machine built (Linux Mint 18.3).</p>
 <p>Last installation detail, <code>performr</code> depends on several packages. These can take some time to install, but usually goes smoothly as long as your R is up to date! If you run into troubles, check the R session info at the bottom of this page. Compare to your own session info for missing packages and older package versions.</p>
 </div>
@@ -195,7 +195,7 @@ perf_df &lt;- simulate_data(n_spp = 3, n_axis = 20, n_reps = 3)</code></pre>
 Simulated data for three ‘species’ plotted with the curves used to generate the samples.
 </p>
 </div>
-<p>There are 3 columns of input data required to run the model, where each row represents an individual unit of sampling (name the columns and order them as you please): integers representing the group (referred to as “species” from here on) each sample belongs to (even if there is only one type), an x-axis (x) consisting of measurements from some environmental variable (soil moisture, temperature, etc.), a measure of performance for each individual studied in that environmental condition (trait). <em>Rows with missing values must be removed before fitting, and sampling among species need not be balanced</em>.</p>
+<p>There are 3 columns of input data required to run the model, where each row represents an individual unit of sampling (name the columns and order them as you please): integers representing the group (referred to as “species” from here on) each sample belongs to (even if there is only one type), an x-axis (x) consisting of measurements from some environmental variable (soil moisture, temperature, etc.), a measure of performance for each individual studied in that environmental condition (trait). <em>Rows with missing values must be removed before fitting</em> – <code>tidyr::drop_na()</code> is good for this.</p>
 </div>
 <div id="fitting-the-model-with-performrstan_performance" class="section level2">
 <h2>Fitting the model with <code>performr::stan_performance()</code></h2>
@@ -222,7 +222,7 @@ Simulated data for three ‘species’ plotted with the curves used to generate 
     seed = 7345, 
     file_id = &quot;stan_example&quot;
   )</code></pre>
-<p>Although it won’t appear on the webpage (the code above is not being evaluated) Stan warns us about the max tree depth (it may also warn about divergent transitions if the simulation is modified). Ideally, those messages should not appear. You can modify the arguments it recommends in your call to <code>stan_performance()</code> as you would if calling Stan directly. Typically, a max_tree_depth between 12 to 14 works well (though slower). The adapt_delta defaults to 0.95, which is sufficient in my experience. Notice the file_id argument, which takes a file prefix if you want to save the model output to file (typically a good idea).</p>
+<p>Although it won’t appear on the webpage (the code above is not being evaluated) Stan warns us about the max tree depth (it may also warn about divergent transitions if the simulation is modified). Ideally, those messages should not appear. You can modify the arguments it recommends in your call to <code>stan_performance()</code> as you would if calling Stan directly. Typically, a max_tree_depth between 12 to 14 works well (though slower). The adapt_delta defaults to 0.95, which is sufficient in my experience. Notice the file_id argument, which takes a file prefix for saving the model output to file in your current directory.</p>
 <p>We can read in the model from file as such:</p>
 <pre class="r"><code>perf_stan &lt;- 
   rstan::read_stan_csv(
@@ -702,27 +702,39 @@ max_df %&gt;%
 <h2>Posterior predictive data generation</h2>
 <p>The whole concept of posterior prediction and generating data from the model is one of my favorite things about Bayesian statistics. It allows for a lot of creativity in how we check our assumptions. We can generate data from the model using this approach:</p>
 <p>First, let’s generate a tidy data frame with all the parameters, plus some valuable derived parameters, like the optimum, area, and breadth for each species:</p>
-<pre class="r"><code>tidy_perf &lt;- 
-  perform_df(
-    perf_stan, 
-    species_order = c(1, 2, 3)
-  ) %&gt;% 
-  head()</code></pre>
+<pre class="r"><code>head(
+  tidy_perf &lt;- 
+    perform_df(
+      perf_stan, 
+      species_order = c(1, 2, 3)
+    ) 
+)</code></pre>
 <pre><code>## Adding missing grouping variables: `species`</code></pre>
+<pre><code>## # A tibble: 6 x 12
+## # Groups:   species [1]
+##   species x_min  draw x_max shape1 shape2 stretch    nu maxima breadth
+##   &lt;chr&gt;   &lt;dbl&gt; &lt;int&gt; &lt;dbl&gt;  &lt;dbl&gt;  &lt;dbl&gt;   &lt;dbl&gt; &lt;dbl&gt;  &lt;dbl&gt;   &lt;dbl&gt;
+## 1 1       -4.99     1  5.73   3.41   4.34    2.37  16.5   1.44   10.7 
+## 2 1       -5.64     2  5.20   4.09   4.80    2.35  15.6   1.35   10.8 
+## 3 1       -5.36     3  6.20   3.72   4.76    2.61  23.0   1.74   11.6 
+## 4 1       -5.81     4  4.79   3.83   3.10    2.50  20.3   1.65   10.6 
+## 5 1       -4.92     5  4.14   3.18   2.24    2.64  18.8   1.62    9.06
+## 6 1       -6.04     6  4.71   4.12   2.94    2.66  24.9   1.86   10.8 
+## # ... with 2 more variables: area &lt;dbl&gt;, special &lt;dbl&gt;</code></pre>
 <p>Now we can generate pseudo observed data from the posterior draws.</p>
 <pre class="r"><code>tidy_perf %&gt;%
   filter(draw == 1) %&gt;%
-posterior_predict(par_df = .) %&gt;%
+  posterior_predict(par_df = .) %&gt;%
   head()</code></pre>
 <pre><code>## # A tibble: 6 x 5
-##       x  trait       mu species  draw
-##   &lt;dbl&gt;  &lt;dbl&gt;    &lt;dbl&gt; &lt;chr&gt;   &lt;int&gt;
-## 1 -4.99 0.126  0        1           1
-## 2 -4.88 0      0.000541 1           1
-## 3 -4.77 0.0514 0.00288  1           1
-## 4 -4.66 0      0.00765  1           1
-## 5 -4.55 0.0176 0.0153   1           1
-## 6 -4.45 0.0306 0.0262   1           1</code></pre>
+##       x   trait        mu species  draw
+##   &lt;dbl&gt;   &lt;dbl&gt;     &lt;dbl&gt; &lt;chr&gt;   &lt;int&gt;
+## 1 -5.51 0       0         1           1
+## 2 -5.40 0       0         1           1
+## 3 -5.28 0       0         1           1
+## 4 -5.17 0       0         1           1
+## 5 -5.06 0       0         1           1
+## 6 -4.94 0.00419 0.0000632 1           1</code></pre>
 <p>By default, the x-axis will be constructed as a sequence of 100 values that start from the minimum posterior draw value of x_min and end at the maximum of x_max. This default can be changed using the x argument. Filtering for posterior draws is not required before using the function – posterior predictive data will be produced for every posterior draw passed to <code>par_df</code>.</p>
 <p>If you have questions, comments, or concerns, please get in touch. I would be excited to discuss!</p>
 <button data-toggle="collapse" data-target="#sessioninfo" class="btn btn-primary btn-md btn-info&gt;">
@@ -743,7 +755,7 @@ R session info
 ##  language en_US                       
 ##  collate  en_US.UTF-8                 
 ##  tz       America/Denver              
-##  date     2018-07-27</code></pre>
+##  date     2018-07-28</code></pre>
 <pre><code>## Packages -----------------------------------------------------------------</code></pre>
 <pre><code>##  package     * version    date       source                               
 ##  assertthat    0.2.0      2017-04-11 CRAN (R 3.4.3)                       
